# assignment_event-saliency-map

./: CMakeLists.txt  README.md
app/scripts/: app_event-saliency-map.xml
smoke-test/: CMakeLists.txt  post-test.sh  pre-test.sh  test.cpp  test.xml
src/: event-orientation-filter.cpp  event-orientation-filter.h  event-saliency-map.cpp  event-saliency-map.h
